--- a/src/main/resources/firstapp.properties
+++ b/src/main/resources/firstapp.properties
@@ -4,7 +4,7 @@ dev.h2.port=9000
 dev.h2.location=/tmp/db
 dev.jdbc.username=sa
 dev.jdbc.password=
-dev.jdbc.database=javabank
+dev.jdbc.database=firstapp
 dev.schema.auto=create
 
 # Prod Settings
@@ -12,6 +12,6 @@ prod.debug=false
 prod.jdbc.username=root
 prod.jdbc.password=
 prod.jdbc.host=localhost
-prod.jdbc.database=javabank
+prod.jdbc.database=firstapp
 pool.min=1
 pool.max=10
